@@ -457,7 +457,7 @@ B = stream A through CMD;
 store B into ':OUTPATH:';\,
                         'expected_err_regex' => "failed with exit status: 2",
                         },
-			{
+			                  {
                         'num' => 5,
 			'execonly' => 'mapred,tez',
                         'pig' => q\
@@ -469,6 +469,17 @@ C = stream A through BADCMD;
 store B into ':OUTPATH:.1';
 store C into ':OUTPATH:.2';\,
                         'expected_err_regex' => "failed with exit status: 1|Error while reading from POStream and passing it to the streaming",
+                        },
+			                  {
+                        'num' => 6,
+			'execonly' => 'mapred,tez',
+                        'pig' => q\
+define BADCMD `perl PigStreamingBad.pl middle` ship(':SCRIPTHOMEPATH:/PigStreamingBad.pl');
+A = load ':INPATH:/singlefile/studenttab10k';
+B = stream A through BADCMD;
+C = ORDER B by *;
+store C into ':OUTPATH:.1';\,
+                        'expected_err_regex' => "failed with exit status: 2|Error while reading from POStream and passing it to the streaming",
                         },
 
                 ]
